# worph

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.ci_shims/morph_kgc/: __init__.py  __main__.py
.github/workflows/: ci.yml  publish.yml
docs/: README.md  compatibility-shims.md
examples/: README.md
examples/csv/: config.ini
examples/dataframe/: kg_generation.py
examples/dict/: kg_generation.py
examples/json/: config.ini
examples/postgres/: config.ini  example.db
examples/rdb/: config.ini  gtfs.db
examples/s3_parquet/: config.ini  data.parquet
examples/xml/: config.ini
specs/: COMPATIBILITY.md  dos-and-donts.md  lessons-learned.md  reimplementation-baseline.md  reimplementation-scope-matrix.md
specs/agents/: gh-expert.md  oop-gof-expert.md  python-expert.md  reviewer.md  yarrrml-rml-rdf-xpath-expert.md
specs/playbooks/: publish-workflow.md  rewrite-v2-playbook.md  (+1 more)
src/: sitecustomize.py  sql_metadata.py
test/: test_ci_shim_uses_worph.py  test_emitter_literal_and_iri_edges.py  test_fnml_engine_template_param_resolution.py  test_fnml_engine_udf_configuration.py  test_fnml_registry_integrity.py  test_loader_dispatch.py  test_materializer_condition_and_recursion.py  test_materializer_cross_source_cache.py  test_materializer_join_index_edge_cases.py  test_materializer_language_map_edge_cases.py  test_materializer_row_dedup.py  test_public_api_contract.py  test_rml_parser_fnml_branches.py  test_runtime_config_paths.py  test_sources_edge_cases.py  test_term_map_template_expansion.py  test_yarrrml_parser_helpers.py
(+34 files in other folders)
