[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "worph"
version = "0.1.1"
description = "Rewrite baseline for Morph-KGC v2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rdflib>=7.0.0,<8.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "elementpath>=4.0.0,<5.0.0",
  "pyoxigraph>=0.4.0,<0.5.0",
  "falcon>=3.1.0,<5.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0,<9.0.0"]

[project.scripts]
worph = "worph.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worph"]
