[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "worph"
version = "0.1.8"
description = "Materialize RDF knowledge graphs from RML/YARRRML mappings with Morph-KGC compatibility"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "morph-kgc>=2.10.0,<3.0.0",
  "pyarrow>=17.0.0,<100.0.0",
  "PyYAML>=6.0.0,<7.0.0",
  "SQLAlchemy>=2.0.0,<3.0.0",
  "openpyxl>=3.1.0,<4.0.0",
  "odfpy>=1.4.0,<2.0.0",
  "shapely>=2.0.0,<3.0.0",
  "pyshp>=2.3.0,<4.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=6.0.0,<7.0.0",
]

[project.scripts]
worph = "worph.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/worph"]
